# oz-policy-builder

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  HANDOFF.md  NOTICE  README.md  SECURITY.md  STATUS.md  completion.md  deny.toml  plan.md
.github/workflows/: ci.yml  fuzz-nightly.yml  release.yml  reproducible-build.yml  skills-lint.yml  walkthroughs.yml
audits/: READY.md  SCOPE.md  THREAT_MODEL.md  index.md
audits/handoff-package/: README.md
ci/: Dockerfile
crates/oz-policy-cli/: Cargo.toml
crates/oz-policy-cli/src/: main.rs
crates/oz-policy-codegen/: Cargo.toml  askama.toml
crates/oz-policy-codegen/fuzz/: .gitignore  Cargo.toml
crates/oz-policy-codegen/fuzz/fuzz_targets/: spec_to_wasm_panic_free.rs
crates/oz-policy-codegen/fuzz/src/: lib.rs
crates/oz-policy-codegen/src/: audit_lints.rs  context.rs  lib.rs  placeholder.rs  render.rs  sandbox.rs
crates/oz-policy-codegen/tests/: codegen_completion.rs  golden_render.rs  minimal_compile.rs  phase3_completion.rs
crates/oz-policy-codegen/tests/golden/: amount_range.rs  argument_pattern.rs  asset_allowlist.rs  call_frequency.rs  composed_3_primitives.rs  function_allowlist.rs  sequence_ordering.rs  time_window.rs
crates/oz-policy-core/: Cargo.toml
crates/oz-policy-core/src/: arg_value.rs  decision_tree.rs  errors.rs  lib.rs  recording.rs  sep41.rs  spec.rs
crates/oz-policy-core/tests/: policy_spec_round_trip.rs
crates/oz-policy-installer/: Cargo.toml
crates/oz-policy-installer/src/: envelope.rs  lib.rs  placeholder.rs  preflight.rs  registry.rs
crates/oz-policy-installer/tests/: envelope_against_testnet.rs  envelope_structure.rs  installer_completion.rs  phase2_completion.rs  phase2_envelope_structure.rs
crates/oz-policy-mcp/: Cargo.toml
crates/oz-policy-mcp/examples/: dump_tools_json.rs
crates/oz-policy-mcp/src/: auth.rs  error_mapping.rs  lib.rs  main.rs  prompts.rs  resources.rs  server.rs  store.rs  tools.rs  verify_chain.rs
crates/oz-policy-mcp/src/tools/: get_policy_artifacts.rs  mod.rs  simulate_custom_source.rs  snapshot.rs
crates/oz-policy-mcp/tests/: get_policy_artifacts_integration.rs  http_smoke.rs  preflight_corpus.rs  simulate_custom_source_unchanged.rs  snapshot_tests.rs  stdio_smoke.rs
crates/oz-policy-recorder/: Cargo.toml
crates/oz-policy-recorder/fuzz/: .gitignore  Cargo.toml
crates/oz-policy-recorder/fuzz/fuzz_targets/: recording_decode_panic_free.rs
crates/oz-policy-recorder/fuzz/src/: lib.rs
crates/oz-policy-recorder/src/: lib.rs  placeholder.rs  recorder.rs  recording.rs
crates/oz-policy-recorder/tests/: decode_nested_auth.rs  decode_simple_transfer.rs  recorder.rs
crates/oz-policy-recorder/tests/common/: mod.rs
crates/oz-policy-recorder/tests/fixtures/: README.md  nested_auth.envelope.xdr.base64  nested_auth.result_meta.xdr.base64  simple_transfer.envelope.xdr.base64  simple_transfer.result_meta.xdr.base64
crates/oz-policy-recorder/tests/recorder/: mod.rs
crates/oz-policy-recorder/tests/recorder/integration/: blend_claim_roundtrip.rs  mod.rs
crates/oz-policy-simhost/: Cargo.toml
crates/oz-policy-simhost/src/: deny.rs  host.rs  lib.rs  permit.rs  placeholder.rs  run.rs
crates/oz-policy-simhost/tests/: host_smoke.rs  phase4_completion.rs  simulate_completion.rs
crates/oz-policy-simhost/vendor-src/minimal-smart-account/: Cargo.toml
crates/oz-policy-simhost/vendor-src/minimal-smart-account/src/: lib.rs
docs/: codegen-dependency-mode.md  concepts.md  install.md  mainnet-readiness.md  mcp-clients.md  mcp-sdk-decision.md  operations.md  oz-internal-shapes.md  reproducible-build.md  rpc-retention-decision.md  security.md  simhost-smart-account-source.md  upstream.md  wallets.md
docs-site/: package.json  pnpm-lock.yaml
docs-site/app/(home)/: page.tsx
docs-site/lib/: layout.shared.tsx  shared.ts
docs/walkthroughs/: 01-blend-yield.md  02-sep41-subscription.md  03-soroswap-bounded.md
frontend/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
frontend/design-source/: oz-policy-builder.dc.html
frontend/e2e/: playground.spec.ts
frontend/src/: App.tsx  styles.css
infra/: README.md
infra/cron/: README.md  refresh-sample-hash.service  refresh-sample-hash.sh  refresh-sample-hash.timer
infra/fly/: Dockerfile.runtime  deploy.sh  fly.toml
researches/: analysis.md  technical-research.md
scripts/: deploy-docs.sh  deploy-frontend.sh  deploy-mcp.sh  reproducible-build.sh  sandbox-profile-macos.sb
skills/oz-policy-builder/: SKILL.md
templates/: base.rs.jinja
templates/constraints/: amount_range.rs.jinja  argument_pattern.rs.jinja  asset_allowlist.rs.jinja  call_frequency.rs.jinja  function_allowlist.rs.jinja  sequence_ordering.rs.jinja  time_window.rs.jinja
tests/mcp-clients/: README.md  claude_desktop_mcp_servers.json  cline_settings.json  continue.json  cursor_mcp.json  mcp_cli_script.sh
walkthroughs/: canonicalize-sim-report.sh
walkthroughs/01-blend-yield/: README.md  expected-install-envelope.xdr  expected-recording.json  expected-sim-report.json  expected-spec-auto.json  source.json
walkthroughs/02-sep41-subscription/: README.md  expected-install-envelope-error.txt  expected-sim-report.json  expected-spec-auto.json  expected-spec-track-a.json  recording.json  source.json
walkthroughs/03-soroswap-bounded/: README.md  expected-install-envelope.xdr  expected-sim-report.json  expected-spec-auto.json  recording.json  source.json
walkthroughs/phase3-codegen-fixture/: README.md  spec.json
walkthroughs/phase7-testnet-install/: BLOCKER.md  README.md  deployed-addresses.json  install-result.json  spec.json
wallet-adapter/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
wallet-adapter/examples/: 01-blend-yield-headless.ts  02-sep41-subscription-headless.ts  03-soroswap-bounded-headless.ts  README.md
wallet-adapter/src/: index.ts  install.test.ts  install.ts  integration.test.ts  oz_smart_account_auth.test.ts  oz_smart_account_auth.ts  phase7_integration.test.ts  sep43.test.ts  sep43.ts  verify.test.ts  verify.ts
(+103 files in other folders)
