[workspace]
resolver = "2"
members = ["crates/*"]
# fuzz subcrates need nightly + libfuzzer-sys; excluded from stable workspace.
# nightly ci builds them via `cargo +nightly fuzz build`.
exclude = [
    "crates/oz-policy-codegen/fuzz",
    "crates/oz-policy-recorder/fuzz",
    "crates/oz-policy-simhost/fuzz",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
authors = ["OZ Policy Builder contributors"]
# todo: confirm org/repo name before first crates.io publish.
repository = "https://github.com/oz-policy-builder/oz-policy-builder"
homepage = "https://github.com/oz-policy-builder/oz-policy-builder"
documentation = "https://docs.rs/oz-policy-core"
readme = "README.md"

# all deps pinned with `=` for reproducible builds.
[workspace.dependencies]
# stellar / soroban ecosystem.
soroban-sdk = "=25.3.0"
soroban-env-host = "=25.0.1"
stellar-accounts = "=0.7.1"
stellar-rpc-client = "=25.1.0"
stellar-xdr = "=25.0.0"

# codegen + mcp.
askama = "=0.16.0"
rmcp = "=1.7.0"
# pinned to `=1.0` to match rmcp's declaration.
schemars = "=1.0"

# testing.
proptest = "=1.11.0"
# opt-in `arbitrary` for fuzz subcrates; never enabled in the workspace build.
arbitrary = { version = "=1.4.2", features = ["derive"] }
# libfuzzer wrapper — only fuzz subcrates depend on it.
libfuzzer-sys = "=0.4.12"

# general-purpose deps.
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
# 1.x — avoid 2.x breaking changes for the Error enum.
thiserror = "=1.0.69"
tokio = { version = "=1.52.3", features = ["macros", "rt-multi-thread"] }
# `env` lets `--token` auto-populate from OZ_POLICY_MCP_TOKEN.
clap = { version = "=4.6.1", features = ["derive", "env"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }
# dashmap backs `McpStore`'s resource cache.
dashmap = "=6.1.0"
uuid = { version = "=1.23.1", features = ["v4"] }
# wasm base64 for `ArtifactBundle` + `BlobResourceContents`.
base64 = "=0.22.1"
# axum hosts rmcp StreamableHttpService + GET /healthz.
axum = { version = "=0.8.9", default-features = false, features = ["http1", "tokio", "json"] }
# tower `util` for bearer-auth ServiceBuilder + Layer.
tower = { version = "=0.5.2", features = ["util"] }
# tower-http TraceLayer for request logging.
tower-http = { version = "=0.6.8", features = ["trace"] }
http = "=1.4.0"
# rustls-tls keeps us off openssl; matches stellar-rpc-client.
reqwest = { version = "=0.12.28", default-features = false, features = ["json", "rustls-tls"] }
# regex powers the `simulate_custom_source` pre-flight forbidden-pattern
# check (see playground design §6.1). pinned to align with the version
# transitively brought in by tracing-subscriber/regex-automata.
regex = "=1.12.3"

# `overflow-checks = true` is load-bearing for i128 safety. do not unset.
[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
strip = "symbols"

[profile.dev]
overflow-checks = true
