[package]
name = "oz-policy-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
authors.workspace = true
description = "Thin CLI mirror of the MCP tool surface — used for local debugging and recorder smoke tests."

[[bin]]
name = "oz-policy-cli"
path = "src/main.rs"

[dependencies]
oz-policy-core = { path = "../oz-policy-core" }
oz-policy-recorder = { path = "../oz-policy-recorder" }
# Phase 2 Round 3: the `prepare-install` subcommand calls
# `oz_policy_installer::build_install_envelope` to produce a wallet-ready
# `TransactionEnvelope` XDR from a PolicySpec. The installer surfaces the
# v1 registry blocker (no published primitive addresses) as
# `Error::InstallPreflightFailed("primitive_address_unknown ...")`; the
# CLI prints that verbatim to stderr (exit non-zero) — no silent masking.
oz-policy-installer = { path = "../oz-policy-installer" }
# Phase 3 Round 2: the `codegen` subcommand calls
# `oz_policy_codegen::synthesize_track_b` to render+compile every
# `Generated` policy slot in a PolicySpec, then writes `source.rs`,
# `policy.wasm`, and `wasm_hash.txt` per slot under `--out`.
oz-policy-codegen = { path = "../oz-policy-codegen" }
# Phase 4 Round 2: the `simulate` subcommand calls
# `oz_policy_simhost::run::run_full_suite` to replay a Recording through a
# spec's compiled policy slate and emit a `SimReport` JSON. Pulled in here
# so the CLI can drive end-to-end policy verification without a separate
# `oz-policy-simulator` binary.
oz-policy-simhost = { path = "../oz-policy-simhost" }
clap = { workspace = true }
# Used by the `simulate` subcommand to compute SHA-256 of each loaded
# `policy.wasm` so the synthesized `CompiledArtifact.wasm_hash` field
# remains a real hash (no `[0; 32]` placeholders). Pinned at the same
# version as `oz-policy-simhost` to keep the dependency graph minimal.
sha2 = "=0.10.9"
# `EnvelopeArtifact` does not derive `Serialize`, so we project it into a
# small local `EnvelopeArtifactJson` struct and serialize that. We only
# need the `derive` macro — workspace `serde` already pulls in
# `features = ["derive"]`.
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
