[package]
name = "oz-policy-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
authors.workspace = true
description = "Track-B codegen: askama templates + sandboxed cargo build driver producing reproducible Soroban policy WASM artifacts."

[dependencies]
oz-policy-core = { path = "../oz-policy-core" }
# askama: type-safe Jinja-like templating used to render Track-B `.rs.jinja`
# templates into compilable Soroban contract sources. Default features include
# `derive` (proc-macro) + `config` (so `askama.toml` is honoured). The
# templates live at the workspace-root `templates/` dir, pointed to by
# `crates/oz-policy-codegen/askama.toml`.
askama = { workspace = true }
# serde: used to derive `Serialize` on `RenderedCrate` so callers (Stream B
# sandbox driver, CLI codegen subcommand, MCP server) can echo a render
# transcript to disk for audit purposes.
serde = { workspace = true }
# sha2: cache-key hashing of (Cargo.toml || src/lib.rs) for the sandbox driver
# and computation of the post-optimize WASM hash. Pinned to match the recorder
# crate (`=0.10.9`) so the workspace resolves a single version. MIT OR Apache-2.0.
sha2 = "=0.10.9"
# tokio: the sandbox driver runs `cargo build` / `stellar contract optimize`
# via `tokio::process::Command` and reads/writes scratch files through
# `tokio::fs`. The workspace pin (`=1.52.3`) already supplies `macros` and
# `rt-multi-thread`; this member adds `process` + `fs` for the async Command
# / File surface.
tokio = { workspace = true, features = ["process", "fs"] }
# tracing: instrumented sandbox driver entry points + warnings when the OS
# sandbox tool (`sandbox-exec` / `bwrap`) is absent. Subscriber init lives in
# binary crates.
tracing = { workspace = true }
# thiserror: typed `SandboxError` enum that converts into the canonical
# `oz_policy_core::Error::CodegenCompileFailed`.
thiserror = { workspace = true }
# tempfile: not used at the public API surface, but kept for unit-test
# scratch directories that must vanish on drop (the production cache root is
# explicitly long-lived for reuse).
tempfile = "=3.27.0"
# dirs: resolves `${HOME}/.cache/oz-policy-codegen` on Linux/macOS for the
# sandbox cache root when `OZ_POLICY_CODEGEN_CACHE_DIR` is unset.
dirs = "=6.0.0"
# syn: AST-based parser used exclusively by `audit_lints.rs` to walk the
# rendered Rust source before sandbox compile. We need the `full` feature so
# expression-level constructs (`match`, `if let`, method-call chains, attribute
# macros) parse — the rendered policy source is a full crate, not just a few
# items. `visit` adds the immutable `Visit` trait we use to walk method-call
# chains. We do not enable `extra-traits` (debug derives) or `visit-mut` (we
# walk, we don't rewrite). Pinned to the version already resolved transitively
# by proc-macro deps in this workspace (`Cargo.lock`) so we don't introduce a
# second `syn 2.x` patch version.
syn = { version = "=2.0.117", features = ["full", "visit"] }
# proc-macro2 with `span-locations`: syn's spans are opaque outside a
# proc-macro context unless this feature is enabled. The audit lints need
# `Span::start().line` to report 1-based line numbers for each violation
# (so MCP clients / CI can grep the rendered source for the offending
# region). The version is pinned to the value already resolved transitively
# elsewhere in the workspace (`Cargo.lock`).
proc-macro2 = { version = "=1.0.106", features = ["span-locations"] }

[dev-dependencies]
tokio = { workspace = true, features = ["process", "fs"] }
tempfile = "=3.27.0"
# sha2: integration test (`tests/minimal_compile.rs`) recomputes the
# `wasm_hash_of_src` cache key for its hand-crafted RenderedCrate.
sha2 = "=0.10.9"
# serde_json: Phase 3 completion gate (`tests/phase3_completion.rs`)
# deserializes the frozen `walkthroughs/phase3-codegen-fixture/spec.json`
# through `PolicySpec` and asserts byte-equality / hash pinning against
# the committed expected artifacts.
serde_json = { workspace = true }
