[package]
name = "oz-policy-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core policy IR, decision tree, schema, and error types for the OZ Accounts Policy Builder."

[dependencies]
# Phase 2 (P2-T1 / P2-T2): the `Error` enum still requires `thiserror`; the
# new `PolicySpec` IR + the relocated `ArgValue` enum (moved here from
# `oz-policy-recorder` so the spec can reference it without a recorder
# dependency cycle) require `serde`, `serde_json`, and `schemars`.
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
