[package]
name = "oz-policy-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
authors.workspace = true
description = "Core policy IR, decision tree, schema, and error types for the OZ Accounts Policy Builder."

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
# optional Arbitrary derives for fuzz subcrates.
arbitrary = { workspace = true, optional = true }

[features]
default = []
# enables Arbitrary on PolicySpec/ArgValue for fuzz harnesses.
arbitrary = ["dep:arbitrary"]
